.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:05:11 **** Rebuild of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o utn.o "..\\utn.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Employee.o "..\\Employee.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o validation.o "..\\validation.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Controller.o "..\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o parser.o "..\\parser.c" 
gcc "-LC:\\Users\\pocho\\Desktop\\TRABAJOS_UTN\\tp_laboratorio_1\\utn-tp3\\tp3_windows" -o pruebaTp3.exe Controller.o Employee.o main.o parser.o utn.o validation.o -lLinkedList 
Info: Nothing to build for pruebaTp3
21:05:51 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc "-LC:\\Users\\pocho\\Desktop\\TRABAJOS_UTN\\tp_laboratorio_1\\utn-tp3\\tp3_windows" -o pruebaTp3.exe Controller.o Employee.o main.o parser.o utn.o validation.o -lLinkedList 
Info: Nothing to build for pruebaTp3
21:06:25 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o utn.o "..\\utn.c" 
gcc "-LC:\\Users\\pocho\\Desktop\\TRABAJOS_UTN\\tp_laboratorio_1\\utn-tp3\\tp3_windows" -o pruebaTp3.exe Controller.o Employee.o main.o parser.o utn.o validation.o -lLinkedList 
01:52:14 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Controller.o "..\\Controller.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o parser.o "..\\parser.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Employee.o "..\\Employee.c" 
..\Employee.c:4:1: error: unknown type name 'Employee'
    4 | Employee* employee_new(){
      | ^~~~~~~~
..\Employee.c: In function 'employee_new':
..\Employee.c:5:2: error: unknown type name 'Employee'
    5 |  Employee* auxEmp;
      |  ^~~~~~~~
..\Employee.c:6:12: error: 'Employee' undeclared (first use in this function)
    6 |  auxEmp = (Employee*) malloc(sizeof(Employee));
      |            ^~~~~~~~
..\Employee.c:6:12: note: each undeclared identifier is reported only once for each function it appears in
..\Employee.c:6:21: error: expected expression before ')' token
    6 |  auxEmp = (Employee*) malloc(sizeof(Employee));
      |                     ^
..\Employee.c:9:9: error: request for member 'sueldo' in something not a structure or union
    9 |   auxEmp->sueldo = 0;
      |         ^~
..\Employee.c:10:3: warning: implicit declaration of function 'strcpy' [-Wimplicit-function-declaration]
   10 |   strcpy(auxEmp->nombre,"lucitas");
      |   ^~~~~~
..\Employee.c:10:3: warning: incompatible implicit declaration of built-in function 'strcpy'
..\Employee.c:3:1: note: include '<string.h>' or provide a declaration of 'strcpy'
    2 | #include <stdlib.h>
  +++ |+#include <string.h>
    3 | 
..\Employee.c:10:16: error: request for member 'nombre' in something not a structure or union
   10 |   strcpy(auxEmp->nombre,"lucitas");
      |                ^~
..\Employee.c:11:9: error: request for member 'horasTrabajadas' in something not a structure or union
   11 |   auxEmp->horasTrabajadas = 0;
      |         ^~
01:52:44 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Employee.o "..\\Employee.c" 
..\Employee.c: In function 'employee_new':
..\Employee.c:11:3: warning: implicit declaration of function 'strcpy' [-Wimplicit-function-declaration]
   11 |   strcpy(auxEmp->nombre,"lucitas");
      |   ^~~~~~
..\Employee.c:11:3: warning: incompatible implicit declaration of built-in function 'strcpy'
..\Employee.c:4:1: note: include '<string.h>' or provide a declaration of 'strcpy'
    3 | #include "Employee.h"
  +++ |+#include <string.h>
    4 | 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:28:14: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'int' [-Wformat=]
   28 |     printf("%s",*(employee)->nombre);
      |             ~^  ~~~~~~~~~~~~~~~~~~~
      |              |  |
      |              |  int
      |              char *
      |             %d
gcc "-LC:\\Users\\pocho\\Desktop\\TRABAJOS_UTN\\tp_laboratorio_1\\utn-tp3\\tp3_windows" -o pruebaTp3.exe Controller.o Employee.o main.o parser.o utn.o validation.o -lLinkedList 
01:53:02 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Employee.o "..\\Employee.c" 
gcc "-LC:\\Users\\pocho\\Desktop\\TRABAJOS_UTN\\tp_laboratorio_1\\utn-tp3\\tp3_windows" -o pruebaTp3.exe Controller.o Employee.o main.o parser.o utn.o validation.o -lLinkedList 
Info: Nothing to build for pruebaTp3
01:53:15 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:28:14: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'int' [-Wformat=]
   28 |     printf("%s",*(employee)->nombre);
      |             ~^  ~~~~~~~~~~~~~~~~~~~
      |              |  |
      |              |  int
      |              char *
      |             %d
..\main.c:34:52: error: 'listaEmpleados' undeclared (first use in this function)
   34 |                 controller_loadFromText("data.csv",listaEmpleados);
      |                                                    ^~~~~~~~~~~~~~
..\main.c:34:52: note: each undeclared identifier is reported only once for each function it appears in
01:53:36 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:28:28: error: invalid type argument of '->' (have 'Employee' {aka 'struct <anonymous>'})
   28 |     printf("%s",(*employee)->nombre);
      |                            ^~
01:53:50 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:28:28: error: 'employee' is a pointer; did you mean to use '->'?
   28 |     printf("%s",*(employee).nombre);
      |                            ^
      |                            ->
..\main.c:27:15: warning: variable 'employee' set but not used [-Wunused-but-set-variable]
   27 |     Employee* employee = employee_new();
      |               ^~~~~~~~
01:54:36 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:28:28: error: 'employee' is a pointer; did you mean to use '->'?
   28 |     printf("%s",*(employee).nombre);
      |                            ^
      |                            ->
..\main.c:27:15: warning: variable 'employee' set but not used [-Wunused-but-set-variable]
   27 |     Employee* employee = employee_new();
      |               ^~~~~~~~
02:03:16 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Employee.o "..\\Employee.c" 
gcc "-LC:\\Users\\pocho\\Desktop\\TRABAJOS_UTN\\tp_laboratorio_1\\utn-tp3\\tp3_windows" -o pruebaTp3.exe Controller.o Employee.o main.o parser.o utn.o validation.o -lLinkedList 
Info: Nothing to build for pruebaTp3
02:03:38 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc "-LC:\\Users\\pocho\\Desktop\\TRABAJOS_UTN\\tp_laboratorio_1\\utn-tp3\\tp3_windows" -o pruebaTp3.exe Controller.o Employee.o main.o parser.o utn.o validation.o -lLinkedList 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file pruebaTp3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
02:03:40 **** Incremental Build of configuration Debug for project pruebaTp3 ****
Info: Internal Builder is used for build
gcc "-LC:\\Users\\pocho\\Desktop\\TRABAJOS_UTN\\tp_laboratorio_1\\utn-tp3\\tp3_windows" -o pruebaTp3.exe Controller.o Employee.o main.o parser.o utn.o validation.o -lLinkedList 
Info: Nothing to build for pruebaTp3
